--- a/relazione/relazione.tex
+++ b/relazione/relazione.tex
@@ -102,13 +102,15 @@ Carlo \textsc{Sindico} % Your name
 
 \subsection{Funzionalit\'a disponibili all'amministratore}
 \begin{itemize}
-\item l\'amministratore attraverso il sistema deve essere in grado di eseguire semplici azioni quali:
+\item l'amministratore attraverso il sistema deve essere in grado di eseguire semplici azioni quali:
 		\begin{enumerate}
 		\item Visualizzare tutte le opere presenti nella biblioteca
 		\item Visualizzare i dettagli di tutte le opere presenti nell'archivio, ed eventualmente di modificarne i parametri quali titolo autore o anno di uscita, a 					seconda che sia un libro o una rivista
 		\item Visualizzare tutti gli utenti registrati alla biblioteca
 		\item Visualizzare i dettagli di tutti gli utenti presenti nell'archivio, ed eventualmente di modificarne i parametri quali nome e cognome
 		\item Aggiungere un'opera per aumentare l'offerta concessa dalla biblioteca
+		\item Eseguire una ricerca di un'opera per titolo
+		\item Eseguire una ricerca di un utente per nome
 		\item Rimuovere un'opera 
 		\item Aggiungere un utente all'archivio della biblioteca
 		\item Rimuovere un utente solo se ha restituito tutte le opere prese in prestito
@@ -117,9 +119,10 @@ Carlo \textsc{Sindico} % Your name
 
 \subsection{Funzionalit\'a disponibili all'utente}
 \begin{itemize}
-\item l\'amministratore attraverso il sistema deve essere in grado di eseguire semplici azioni quali:
+\item l'utente attraverso il sistema deve essere in grado di eseguire semplici azioni quali:
 		\begin{enumerate}
 		\item Visualizzare tutte le opere presenti nella biblioteca
+		\item Eseguire una ricerca di un'opera per titolo
 		\item Ricevere in prestito secondo i limiti descritti precedentemente libri e riviste
 		\item Restituire alla biblioteca libri e riviste
 		\end{enumerate}
